fixed the login portlet and the label alignment

--- a/ukbg/theme/static/bootstrap-3.3.5/less/siguv-form.less
+++ b/ukbg/theme/static/bootstrap-3.3.5/less/siguv-form.less
@@ -120,7 +120,3 @@ label {display:inline;}
 #actionsView  {
         padding-top:20px;
         }
-.required:after {
-   content: "*";
-   color:red;
-}
